--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,7 @@
-logging.level.com.rookies4.MySpringbootLab=DEBUG
+spring.datasource.url=jdbc:mariadb://localhost:3306/bookdb
+spring.datasource.username=root
+spring.datasource.password=maria
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
