--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.application.name=MySpringbootLab
+spring.datasource.url=jdbc:mariadb://localhost:3306/bookdb
+spring.datasource.username=root
+spring.datasource.password=maria
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-myprop.username=springboot
-myprop.port=${random.int(1,100)}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
