--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,15 @@
 logging.level.com.rookies4.MySpringbootLab=INFO
+myprop.username=Prod Env
+
+logging.level.com.rookies4.myspringbootlab=info
+
+# mariaDB ???? ??
+spring.datasource.url=jdbc:mariadb://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_DATABASE:lab_db}
+spring.datasource.username=${DB_USERNAME:lab}
+spring.datasource.password=${DB_PASSWORD:lab}
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+
+# jpa ?? ??
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
