--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/bookdb
-spring.datasource.username=root
-spring.datasource.password=maria
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+myprop.username=Test Env
+
+#log level
+logging.level.com.rookies4.myspringbootlab=debug
